# Agent-notebook

./: Plan.md  agent-interview-guide.md  openai_file_search_summary.md
stage-1-minimal-agent/: .env.example  .gitignore  README.md  pyproject.toml
stage-1-minimal-agent/docs/: 00-implementation-plan.md  01-llm-chat.md  02-structured-output.md  03-tool-definition.md  04-tool-call-parsing.md  05-tool-execution-loop.md  06-guardrails.md  07-code-walkthrough.md
stage-1-minimal-agent/src/minimal_agent/: __init__.py  config.py  errors.py  main.py  models.py
stage-1-minimal-agent/src/minimal_agent/agent/: __init__.py  loop.py  prompt.py  protocol.py
stage-1-minimal-agent/src/minimal_agent/chat/: __init__.py  simple_chat.py
stage-1-minimal-agent/src/minimal_agent/llm/: __init__.py  openai_compatible_client.py
stage-1-minimal-agent/src/minimal_agent/tools/: __init__.py  base.py  calculator.py  read_file.py  registry.py
stage-2-rag-memory-agent/: .env.example  .gitignore  README.md  pyproject.toml
stage-2-rag-memory-agent/docs/: 00-implementation-plan.md  01-rag-pipeline.md  02-tools.md  03-memory.md  04-resilience.md  05-citations.md  06-code-walkthrough.md
stage-2-rag-memory-agent/src/research_agent/: __init__.py  config.py  errors.py  main.py  models.py
stage-2-rag-memory-agent/src/research_agent/agent/: __init__.py  loop.py  prompt.py  protocol.py
stage-2-rag-memory-agent/src/research_agent/evidence/: __init__.py  ledger.py  validator.py
stage-2-rag-memory-agent/src/research_agent/llm/: __init__.py  openai_compatible_client.py
(+25 files in other folders)
